#                                  CHANGE LOG FOR REDTEAMENUM MODULE                                  #
*******************************************************************************************************
Module Version 1.2
  - Updated Help to fit typical PS cmdlet standards
  - Added 3 cmdlets from my ReversePowerShell module to this module as they are red team tools as well.
  - Added initial creation of the Test-BruteLocalUserCredential to the module manifest.
  - Added initial creation of the Enable-RDP cmdlet to the module manifest.
  - Added initial creation of the Invoke-DccwUACBypass cmdlet to the module manifest.
  - Added initial creation of the Test-KerberosDoubleHop cmdlet to the module manifest.
  - Added initial creation of the Invoke-AzurePasswordSpray cmdlet to the module manifest.
  - Added initial creation of the Get-ClearTextPassword cmdlet to the module manifest.
  - Added initial creation of the Test-BruteForceZip cmdlet to the module manifest.
  - Added initial creation of the Test-BruteForceCredentials to the module manifest.
  - Added iniital creation of the Get-NetworkShareInfo to the module manifest.

Module Version 1.1
  - Added initial creation of the Invoke-UnquotedServicePathExploit cmdlet to the module manifest.
  - Added initial creation of the Invoke-FodHelperBypass cmdlet to the module manifest.
  - Added initial creation of the Invoke-InMemoryPayload cmdlet to the module manifest.
  - Added initial creation of the Invoke-UseCreds cmdlet to the module manifest.

  Module Version 1.0
  - Added initial creation of the Test-PrivEsc module to the manifest.
  - Added initial creation of the Get-InitialEnum cmdlet to the module manifest.
  - Added initial creation of the Convert-Base64 cmdlet to the module manifest.
  - Added initial creation of the Convert-SID cmdlet to the module manifest.
  - Added initial creation of the Get-LdapInfo cmdlet to the module manifest.